// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Switcher /> layout should render checked switcher 1`] = `
<div
  className="mfui-switcher"
>
  <div
    className="mfui-switcher__input mfui-switcher__input_checked mfui-switcher__input_no-touch"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="mfui-switcher__pointer"
    />
  </div>
</div>
`;

exports[`<Switcher /> layout should render disabled switcher 1`] = `
<div
  className="mfui-switcher mfui-switcher_disabled"
>
  <div
    className="mfui-switcher__input mfui-switcher__input_disabled mfui-switcher__input_no-touch"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="mfui-switcher__pointer"
    />
  </div>
</div>
`;

exports[`<Switcher /> layout should render showLoader switcher with children 1`] = `
<div
  className="mfui-switcher"
>
  <div
    className="mfui-switcher__input mfui-switcher__input_loaded mfui-switcher__input_no-touch"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="mfui-switcher__loader"
    />
    <div
      className="mfui-switcher__pointer"
    />
  </div>
  <div
    className="mfui-switcher__content mfui-switcher__content_size_medium"
  >
    children
  </div>
</div>
`;

exports[`<Switcher /> layout should render switcher for mobile devices 1`] = `
<div
  className="mfui-switcher"
>
  <div
    className="mfui-switcher__input"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="mfui-switcher__pointer"
    />
  </div>
</div>
`;

exports[`<Switcher /> layout should render switcher with children with small size by left 1`] = `
<div
  className="mfui-switcher"
>
  <div
    className="mfui-switcher__content mfui-switcher__content_size_small mfui-switcher__content_left"
  >
    children
  </div>
  <div
    className="mfui-switcher__input mfui-switcher__input_loaded mfui-switcher__input_no-touch"
    onClick={[Function]}
    onKeyDown={[Function]}
  >
    <div
      className="mfui-switcher__loader"
    />
    <div
      className="mfui-switcher__pointer"
    />
  </div>
</div>
`;

exports[`<Switcher /> layout should render switcher with default props 1`] = `
<div
  className="mfui-switcher"
>
  <div
    className="mfui-switcher__input mfui-switcher__input_no-touch"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="mfui-switcher__pointer"
    />
  </div>
</div>
`;

exports[`<Switcher /> layout should render switcher with external className and data-attributes 1`] = `
<div
  className="mfui-switcher external-class-name"
  data-testid="root-test"
>
  <div
    className="mfui-switcher__input mfui-switcher__input_no-touch"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="mfui-switcher__pointer"
    />
  </div>
</div>
`;
